Fixed product skeleton overflow

--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -5,3 +5,7 @@
   align-items: center;
   justify-content: space-evenly;
 }
+.cards__skel__container {
+  overflow: hidden;
+  position: relative;
+}
