--- a/src/components/Skeleton/Glow/Glow.css
+++ b/src/components/Skeleton/Glow/Glow.css
@@ -9,7 +9,7 @@
 }
 
 .glow div {
-  width: 5%;
+  width: 20%;
   height: 100%;
   background: rgba(255, 255, 255, 0.1);
   -webkit-transform: skewX(20deg);
